# rpg_life_bot

./: .dockerignore  .env  .gitignore  DEPLOY.md  Dockerfile  README.md  Roadmap.md  alembic.ini  backup.sh  bot.py  celery_app.py  config.py  deploy.sh  docker-compose.yml  migrate_data.py  pyproject.toml  rpg_bot.db  run_celery.py  tasks.py  test_logging.py  upgrade.sh
core/: logger.py  service_provider.py
db/: database.py  models.py
docs/: stack
handlers/: __init__.py  buttons.py  faq.py  insight.py  onboarding.py  phase.py  quests.py  reflect.py  reminder.py  settings.py  user.py
middleware/: error_handler.py  logging.py
migrations/: env.py
migrations/versions/: 2a429461da5b_initial_migration.py  __init__.py
services/: quest_service.py  reminder_service.py  user_service.py
storage/: data.json
tests/: test_user_service.py
utils/: cache.py  helpers.py  keyboards.py  quest_logic.py  storage.py
